--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build, Push, Cleanup, and Deploy to AWS EKS
+name: Build, Push, Cleanup, and Deploy to Minikube
 
 on:
   push:
@@ -11,7 +11,6 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
@@ -34,7 +33,6 @@ jobs:
   cleanup:
     runs-on: ubuntu-latest
     needs: build-and-push
-
     steps:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -47,7 +45,7 @@ jobs:
           for SERVICE in "${SERVICES[@]}"; do
             ALL_TAGS=$(curl -s -u "${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }}" \
               "https://hub.docker.com/v2/repositories/huutai2403/$SERVICE/tags/" | jq -r '.results | sort_by(.last_updated) | .[].name')
-
+          
             TAGS_TO_DELETE=$(echo "$ALL_TAGS" | head -n -$TAGS_TO_KEEP)
 
             for TAG in $TAGS_TO_DELETE; do
@@ -60,17 +58,12 @@ jobs:
       - name: Logout from Docker Hub
         run: docker logout
 
-  deploy-to-eks:
+  deploy-to-minikube:
     runs-on: ubuntu-latest
     needs: build-and-push  # Chạy sau khi build & push thành công
-
     steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-1  # Singapore
+      - name: Checkout source code
+        uses: actions/checkout@v4
 
       - name: Install kubectl
         run: |
@@ -78,16 +71,15 @@ jobs:
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
 
-      - name: Update kubeconfig
-        run: aws eks update-kubeconfig --name my-cluster --region ap-southeast-1
+      - name: Set Minikube context
+        run: |
+          kubectl config use-context minikube
 
-      - name: Deploy Services to AWS EKS
+      - name: Deploy Services to Minikube
         run: |
           SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
           for SERVICE in "${SERVICES[@]}"; do
-            echo "Deploying $SERVICE to EKS..."
-
-            # Kiểm tra xem Deployment đã tồn tại chưa
+            echo "Deploying $SERVICE to Minikube..."
             if kubectl get deployment $SERVICE -n default &>/dev/null; then
               echo "Deployment $SERVICE exists, updating image..."
               kubectl set image deployment/$SERVICE $SERVICE=huutai2403/$SERVICE:latest -n default
