--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,14 @@
-name: Build, Push, Cleanup, and Deploy to Minikube
+name: CI/CD to Minikube on Personal Ubuntu
 
 on:
   push:
-    branches:
-      - master  # Auto build image khi có commit vào nhánh master
-  schedule:
-    - cron: '0 0 * * *'  # Chạy cleanup hàng ngày vào 00:00 UTC
-  workflow_dispatch:  # Cho phép chạy thủ công nếu cần
+    branches: [ "master" ]
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
+  build-deploy:
+    runs-on: self-hosted
     steps:
-      - name: Checkout source code
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Log in to Docker Hub
@@ -22,70 +18,27 @@ jobs:
         run: |
           SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
           for SERVICE in "${SERVICES[@]}"; do
-            echo "Building and pushing: huutai2403/$SERVICE:latest"
-            docker build -t huutai2403/$SERVICE:latest ./$SERVICE
-            docker push huutai2403/$SERVICE:latest
+            echo "Building and pushing: $SERVICE"
+            docker build -t ${{ secrets.DOCKER_USERNAME }}/$SERVICE:latest ./$SERVICE
+            docker push ${{ secrets.DOCKER_USERNAME }}/$SERVICE:latest
           done
 
-      - name: Logout from Docker Hub
-        run: docker logout
-
-  cleanup:
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    steps:
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Delete old images (chỉ giữ lại 3 phiên bản mới nhất)
+      - name: Set Minikube context and Deploy to Minikube
         run: |
-          SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
-          TAGS_TO_KEEP=3
-
-          for SERVICE in "${SERVICES[@]}"; do
-            ALL_TAGS=$(curl -s -u "${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }}" \
-              "https://hub.docker.com/v2/repositories/huutai2403/$SERVICE/tags/" | jq -r '.results | sort_by(.last_updated) | .[].name')
-          
-            TAGS_TO_DELETE=$(echo "$ALL_TAGS" | head -n -$TAGS_TO_KEEP)
-
-            for TAG in $TAGS_TO_DELETE; do
-              curl -X DELETE -u "${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }}" \
-                "https://hub.docker.com/v2/repositories/huutai2403/$SERVICE/tags/$TAG/"
-              echo "Deleted: huutai2403/$SERVICE:$TAG"
-            done
-          done
-
-      - name: Logout from Docker Hub
-        run: docker logout
-
-  deploy-to-minikube:
-    runs-on: ubuntu-latest
-    needs: build-and-push  # Chạy sau khi build & push thành công
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
-
-      - name: Install kubectl
-        run: |
-          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-          chmod +x kubectl
-          sudo mv kubectl /usr/local/bin/
-
-      - name: Set Minikube context
-        run: kubectl config use-context minikube
-
-      - name: Deploy Services to Minikube
-        run: |
+          kubectl config use-context minikube
           SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
           for SERVICE in "${SERVICES[@]}"; do
-            echo "Deploying $SERVICE to Minikube..."
-            if kubectl get deployment $SERVICE -n default &>/dev/null; then
+            echo "Deploying $SERVICE..."
+            if kubectl get deployment "$SERVICE" -n default &>/dev/null; then
               echo "Deployment $SERVICE exists, updating image..."
-              kubectl set image deployment/$SERVICE $SERVICE=huutai2403/$SERVICE:latest -n default
-              kubectl rollout restart deployment/$SERVICE -n default
+              kubectl set image deployment/"$SERVICE" "$SERVICE"=${{ secrets.DOCKER_USERNAME }}/"$SERVICE":latest -n default
+              kubectl rollout restart deployment/"$SERVICE" -n default
             else
-              echo "Creating new deployment for $SERVICE..."
-              kubectl create deployment $SERVICE --image=huutai2403/$SERVICE:latest -n default
-              kubectl expose deployment $SERVICE --type=ClusterIP --port=80 -n default
+              echo "Creating deployment for $SERVICE..."
+              kubectl create deployment "$SERVICE" --image=${{ secrets.DOCKER_USERNAME }}/"$SERVICE":latest -n default
+              kubectl expose deployment "$SERVICE" --type=ClusterIP --port=80 -n default
             fi
           done
+
+      - name: Logout from Docker Hub
+        run: docker logout
