--- a/.github/workflows/minikube-cicd.yml
+++ b/.github/workflows/minikube-cicd.yml
@@ -1,4 +1,4 @@
-name: CI/CD to Minikube on Personal Ubuntu
+name: CI/CD to Minikube on Docker Desktop
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
 jobs:
   build-deploy:
     runs-on: self-hosted
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -18,7 +19,7 @@ jobs:
         run: |
           SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
           for SERVICE in "${SERVICES[@]}"; do
-            echo " Building and pushing: $SERVICE"
+            echo "Building and pushing: $SERVICE"
             docker build -t ${{ secrets.DOCKER_USERNAME }}/$SERVICE:latest ./$SERVICE
             docker push ${{ secrets.DOCKER_USERNAME }}/$SERVICE:latest
           done
@@ -26,7 +27,7 @@ jobs:
       - name: Start Minikube
         run: |
           if ! minikube status &>/dev/null; then
-            echo " Starting Minikube..."
+            echo "Starting Minikube..."
             minikube start --driver=docker
           else
             echo "Minikube is already running."
@@ -35,19 +36,19 @@ jobs:
 
       - name: Apply Kubernetes Manifests
         run: |
-          echo "🚀 Applying all Kubernetes manifests..."
+          echo " Applying all Kubernetes manifests..."
           kubectl apply -f k8s/
 
       - name: Update Deployment Images
         run: |
           SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
           for SERVICE in "${SERVICES[@]}"; do
-            echo " Updating deployment image for: $SERVICE"
+            echo "Updating deployment image for: $SERVICE"
             if kubectl get deployment "$SERVICE" -n default &>/dev/null; then
               kubectl set image deployment/"$SERVICE" "$SERVICE"=${{ secrets.DOCKER_USERNAME }}/"$SERVICE":latest -n default || true
               kubectl rollout restart deployment/"$SERVICE" -n default
             else
-              echo " Deployment $SERVICE not found, skipping update."
+              echo "Deployment $SERVICE not found, skipping update."
             fi
           done
 
