--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: eureka-service
           image: huutai2403/eureka-service:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8761
           env:
