--- a/k8s/product-service.yaml
+++ b/k8s/product-service.yaml
@@ -13,6 +13,10 @@ spec:
       labels:
         app: product-service
     spec:
+      initContainers:
+        - name: wait-for-eureka
+          image: busybox
+          command: ['sh', '-c', 'until nc -z eureka-service 8761; do echo waiting for eureka...; sleep 5; done']
       containers:
         - name: product-service
           image: huutai2403/product-service:latest
@@ -21,38 +25,13 @@ spec:
             - containerPort: 8082
           env:
             - name: SPRING_DATASOURCE_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: app-config
-                  key: SPRING_DATASOURCE_URL
+              value: "jdbc:mysql://mysql:3306/musicstore?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC"
             - name: MINIO_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: app-config
-                  key: MINIO_URL
+              value: "http://minio:9000"
             - name: MINIO_ACCESS_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: minio-secret
-                  key: MINIO_ACCESS_KEY
+              value: "minioadmin"
             - name: MINIO_SECRET_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: minio-secret
-                  key: MINIO_SECRET_KEY
-          livenessProbe:
-            httpGet:
-              path: /actuator/health
-              port: 8082
-            initialDelaySeconds: 10
-            periodSeconds: 5
-          readinessProbe:
-            httpGet:
-              path: /actuator/health
-              port: 8082
-            initialDelaySeconds: 5
-            periodSeconds: 5
-      restartPolicy: Always
+              value: "minioadmin"
 ---
 apiVersion: v1
 kind: Service
