--- a/k8s/grafana.yaml
+++ b/k8s/grafana.yaml
@@ -1,35 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: eureka-service
+  name: grafana
   namespace: musical-microservice
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: eureka-service
+      app: grafana
   template:
     metadata:
       labels:
-        app: eureka-service
+        app: grafana
     spec:
       containers:
-        - name: eureka-service
-          image: huutai2403/eureka-service:latest
-          imagePullPolicy: Always
+        - name: grafana
+          image: grafana/grafana
           ports:
-            - containerPort: 8761
+            - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: eureka-service
+  name: grafana
   namespace: musical-microservice
 spec:
   selector:
-    app: eureka-service
+    app: grafana
   ports:
     - protocol: TCP
-      port: 8761
-      targetPort: 8761
+      port: 3000
+      targetPort: 3000
   type: ClusterIP
