--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -1,35 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: eureka-service
+  name: redis
   namespace: musical-microservice
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: eureka-service
+      app: redis
   template:
     metadata:
       labels:
-        app: eureka-service
+        app: redis
     spec:
       containers:
-        - name: eureka-service
-          image: huutai2403/eureka-service:latest
-          imagePullPolicy: Always
+        - name: redis
+          image: redis:7.2
           ports:
-            - containerPort: 8761
+            - containerPort: 6379
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: eureka-service
+  name: redis
   namespace: musical-microservice
 spec:
   selector:
-    app: eureka-service
+    app: redis
   ports:
     - protocol: TCP
-      port: 8761
-      targetPort: 8761
+      port: 6379
+      targetPort: 6379
   type: ClusterIP
