--- a/k8s/zipkin.yaml
+++ b/k8s/zipkin.yaml
@@ -1,35 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: eureka-service
+  name: zipkin
   namespace: musical-microservice
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: eureka-service
+      app: zipkin
   template:
     metadata:
       labels:
-        app: eureka-service
+        app: zipkin
     spec:
       containers:
-        - name: eureka-service
-          image: huutai2403/eureka-service:latest
-          imagePullPolicy: Always
+        - name: zipkin
+          image: openzipkin/zipkin:latest
           ports:
-            - containerPort: 8761
+            - containerPort: 9411
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: eureka-service
+  name: zipkin
   namespace: musical-microservice
 spec:
   selector:
-    app: eureka-service
+    app: zipkin
   ports:
     - protocol: TCP
-      port: 8761
-      targetPort: 8761
+      port: 9411
+      targetPort: 9411
   type: ClusterIP
