--- a/.github/workflows/minikube-cicd.yml
+++ b/.github/workflows/minikube-cicd.yml
@@ -1,10 +1,10 @@
-name: CI/CD to Minikube on Docker Desktop
+name: CI/CD to Kubernetes on Docker Desktop
 
 on:
   push:
     branches: [ "master" ]
   schedule:
-    - cron: '0 0 * * *'  # Chạy hàng ngày vào 00:00 UTC để dọn dẹp image cũ
+    - cron: '0 0 * * *'  # Dọn dẹp image cũ hàng ngày vào 00:00 UTC
 
 jobs:
   build-deploy:
@@ -17,61 +17,45 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build and Push Docker Images
+      - name: Build & Push Docker Images (Only for Custom Services)
         run: |
-          COMMIT_SHA=$(git rev-parse --short HEAD)  # Lấy SHA của commit hiện tại
-          SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service" "mysql" "redis" "minio" "zipkin" "prometheus" "grafana")
+          COMMIT_SHA=$(git rev-parse --short HEAD)
+          SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service" "minio" "zipkin")
+
           for SERVICE in "${SERVICES[@]}"; do
-            echo "Building image for: $SERVICE"
-            docker build -t huutai2403/$SERVICE:$COMMIT_SHA ./$SERVICE
-            docker tag huutai2403/$SERVICE:$COMMIT_SHA huutai2403/$SERVICE:latest
-            echo "Pushing image for: $SERVICE"
-            docker push huutai2403/$SERVICE:$COMMIT_SHA
-            docker push huutai2403/$SERVICE:latest
+            if [[ -f "./$SERVICE/Dockerfile" ]]; then
+              echo "Building image for: $SERVICE"
+              docker build -t huutai2403/$SERVICE:$COMMIT_SHA ./$SERVICE
+              docker tag huutai2403/$SERVICE:$COMMIT_SHA huutai2403/$SERVICE:latest
+              echo "Pushing image for: $SERVICE"
+              docker push huutai2403/$SERVICE:$COMMIT_SHA
+              docker push huutai2403/$SERVICE:latest
+            else
+              echo "Skipping build for $SERVICE (Dockerfile not found)"
+            fi
           done
 
-      - name: Start Minikube
+      - name: Apply Kubernetes Manifests (Only if changed)
         run: |
-          if ! minikube status &>/dev/null; then
-            echo "Starting Minikube..."
-            minikube start --driver=docker
-          else
-            echo "Minikube is already running."
+          CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD | grep '^k8s/')
+          if [[ -z "$CHANGED_FILES" ]]; then
+            echo "No changes in Kubernetes manifests, skipping apply."
+            exit 0
           fi
-          kubectl config use-context minikube
           
-          # Tạo namespace nếu chưa tồn tại
-          kubectl get namespace musical-microservice || kubectl create namespace musical-microservice
-
-      - name: Pull Docker Images to Minikube
-        run: |
-          eval $(minikube docker-env)  # Chạy Minikube với môi trường Docker
-          SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
-          for SERVICE in "${SERVICES[@]}"; do
-            docker pull huutai2403/$SERVICE:latest
+          echo "Applying updated Kubernetes manifests..."
+          for FILE in $CHANGED_FILES; do
+            kubectl apply -f "$FILE" -n musical-microservice
           done
-
-      - name: Wait for Redis to be Ready
-        run: |
-          echo "Waiting for Redis to be ready..."
-          until nc -z redis 6379; do
-            echo "Redis is not available yet..."
-            sleep 5
-          done
-          echo "Redis is ready!"    
-
-      - name: Apply Kubernetes Manifests
-        run: |
-          echo "Applying all Kubernetes manifests..."
-          kubectl apply -f k8s/ -n musical-microservice
 
       - name: Update Deployment Images
         run: |
           COMMIT_SHA=$(git rev-parse --short HEAD)
-          SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
+          SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service" "minio" "zipkin")
+
           for SERVICE in "${SERVICES[@]}"; do
-            echo "Updating deployment image for: $SERVICE"
             if kubectl get deployment "$SERVICE" -n musical-microservice &>/dev/null; then
+              echo "Updating deployment image for: $SERVICE"
               kubectl set image deployment/"$SERVICE" "$SERVICE"=huutai2403/"$SERVICE":$COMMIT_SHA -n musical-microservice
               kubectl rollout restart deployment/"$SERVICE" -n musical-microservice
             else
@@ -90,19 +74,27 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Delete old images (chỉ giữ lại 3 phiên bản mới nhất)
+      - name: Delete old images (Keep only 3 latest versions)
         run: |
-          IMAGE_NAMES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
+          IMAGE_NAMES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service" "minio" "zipkin")
           TAGS_TO_KEEP=3
 
           for IMAGE in "${IMAGE_NAMES[@]}"; do
+            echo "Fetching tags for $IMAGE..."
             ALL_TAGS=$(curl -s -u "${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }}" \
               "https://hub.docker.com/v2/repositories/huutai2403/$IMAGE/tags/" | jq -r '.results | sort_by(.last_updated) | .[].name')
+
             TAGS_TO_DELETE=$(echo "$ALL_TAGS" | head -n -$TAGS_TO_KEEP)
+
+            if [[ -z "$TAGS_TO_DELETE" ]]; then
+              echo "No old tags to delete for $IMAGE."
+              continue
+            fi
+
             for TAG in $TAGS_TO_DELETE; do
+              echo "Deleting: huutai2403/$IMAGE:$TAG"
               curl -X DELETE -u "${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }}" \
-                "https://hub.docker.com/v2/repositories/huutai2403/$IMAGE/tags/$TAG/"
-              echo "Deleted: huutai2403/$IMAGE:$TAG"
+                "https://hub.docker.com/v2/repositories/huutai2403/$IMAGE/tags/$TAG/" || echo "Failed to delete $TAG"
             done
           done
 
