--- a/k8s/prometheus.yaml
+++ b/k8s/prometheus.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
         - name: prometheus
-          image: prom/prometheus
+          image: prom/prometheus:latest
           ports:
             - containerPort: 9090
           volumeMounts:
@@ -55,4 +55,4 @@ spec:
     - protocol: TCP
       port: 9090
       targetPort: 9090
-  type: ClusterIP
+  type: LoadBalancer
