--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -12,7 +12,6 @@ server.tomcat.uri-encoding=UTF-8
 
 spring.security.ignored=/api/auth/**
 
-
 # Logging
 logging.level.root=INFO
 logging.level.org.springframework.security=DEBUG
@@ -57,44 +56,16 @@ spring.cloud.gateway.routes[6].id=notification-service
 spring.cloud.gateway.routes[6].uri=lb://NOTIFICATION-SERVICE
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/notifications/**
 
-# Swagger UI Configuration
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.api-docs.path=/api-docs
+spring.cloud.gateway.routes[7].id=inventory-service
+spring.cloud.gateway.routes[7].uri=lb://INVENTORY-SERVICE
+spring.cloud.gateway.routes[7].predicates[0]=Path=/api/inventory/**
 
 # Redis Rate Limiting Configuration
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
-# Tracing with Zipkin & Micrometer
-spring.zipkin.base-url=http://localhost:9411
-spring.sleuth.sampler.probability=1.0
-
-# Actuator Endpoints (Monitoring)
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
-management.health.cassandra.enabled=true
-management.health.circuitbreakers.enabled=true
-management.endpoint.health.probes.enabled=true
-management.endpoint.info.enabled=true
-management.endpoint.beans.enabled=true
 
 
-# Resilience4j Circuit Breaker Configs (Handling Failures)
-resilience4j.circuitbreaker.configs.default.register-health-indicator=true
-resilience4j.circuitbreaker.configs.default.sliding-window-type=COUNT_BASED
-resilience4j.circuitbreaker.configs.default.sliding-window-size=10
-resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
-resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=5s
-resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-open-state=3
-resilience4j.circuitbreaker.configs.default.automatic-transition-from-open-to-half-open-enabled=true
-resilience4j.circuitbreaker.configs.default.minimum-number-of-calls=5
-
-# Resilience4j Timeout Properties
-resilience4j.timelimiter.configs.default.timeout-duration=3s
-
-# Resilience4j Retry Properties
-resilience4j.retry.configs.default.max-attempts=3
-resilience4j.retry.configs.default.wait-duration=2s
 
 
 
