--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -7,11 +7,11 @@ server.port=8085
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 # Redis
-spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.data.redis.password=
 spring.data.redis.timeout=60s
-spring.data.redis.database=0 
+spring.data.redis.database=0
 
 
 # -----------------------------------
