--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -20,7 +20,7 @@ logging.level.org.springframework.cloud.gateway=DEBUG
 
 # JWT Security Configuration
 security.jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
-security.jwt.accessToken.expiration=900000    # 15 phút (15 * 60 * 1000)
+security.jwt.accessToken.expiration=604800000     #7 ngày ?? dev- 15 phút (15 * 60 * 1000)
 security.jwt.refreshToken.expiration=604800000  # 7 ngày (7 * 24 * 60 * 60 * 1000)
 
 # Eureka Client Configuration (Service Discovery)
