--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -212,8 +212,35 @@ services:
       EUREKA_INSTANCE_HOSTNAME: order-service
     networks:
       - microservice-net
+  # 13. Payment Service
+  payment-service:
+    container_name: payment-service
+    build:
+      context: ./payment-service
+      dockerfile: Dockerfile
+    ports:
+      - "8087:8087"
+    depends_on:
+      - eureka-service
+      - postgres
+      - kafka
+    environment:
+      SPRING_APPLICATION_NAME: payment-service
+      SERVER_PORT: 8087
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/payment_db
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: password
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      SPRING_KAFKA_CONSUMER_GROUP_ID: payment-group
+      SPRING_KAFKA_CONSUMER_AUTO_OFFSET_RESET: earliest
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-service:8761/eureka
+      EUREKA_INSTANCE_HOSTNAME: payment-service
+    networks:
+      - microservice-net
 
-  # 13. PostgreSQL
+
+  # 14. PostgreSQL
   postgres:
     container_name: postgres
     image: postgres:17
@@ -228,7 +255,7 @@ services:
     networks:
       - microservice-net
 
-  # 14. Kafka Broker
+  # 15. Kafka Broker
   kafka:
     image: confluentinc/cp-kafka:7.2.2
     container_name: kafka
@@ -244,7 +271,7 @@ services:
     networks:
       - microservice-net
 
-  # 15. Zookeeper
+  # 16. Zookeeper
   zookeeper:
     image: confluentinc/cp-zookeeper:7.2.2
     container_name: zookeeper
