--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -6,16 +6,17 @@ server.port=8085
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
-# Redis
+# -----------------------------------
+# Redis Configuration
+# -----------------------------------
 spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.data.redis.password=
 spring.data.redis.timeout=60s
 spring.data.redis.database=0
 
-
 # -----------------------------------
-# JWT
+# JWT Configuration
 # -----------------------------------
 jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
 
@@ -30,4 +31,18 @@ eureka.instance.hostname=cart-service
 # -----------------------------------
 logging.level.org.springframework.web=DEBUG
 logging.level.com.musicstore=INFO
+
+# ===============================
+# Kafka Configuration (Cart-Service Producer)
+# ===============================
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.producer.retries=3        
+spring.kafka.producer.acks=all                             
+spring.kafka.producer.properties.enable.idempotence=true
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+# Kafka Topic
+cart.checkout.topic=checkout-events
+
+
 
