--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -64,6 +64,10 @@
 			<artifactId>spring-security-config</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>jakarta.servlet</groupId>
 			<artifactId>jakarta.servlet-api</artifactId>
 			<version>6.0.0</version>
