done inventory listen and sent event to order

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -19,9 +19,7 @@ eureka.instance.hostname=order-service
 # Kafka Configuration (Order-Service)
 # ===============================
 spring.kafka.bootstrap-servers=kafka:9092
-spring.kafka.consumer.group-id=order-group
-
-# Consumer Configuration
+spring.kafka.consumer.group-id=order-group-new
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.consumer.max-poll-records=10
@@ -29,15 +27,10 @@ spring.kafka.consumer.fetch-min-size=1
 spring.kafka.consumer.fetch-max-wait=500
 spring.kafka.consumer.properties.spring.json.trusted.packages=vn.com.iuh.fit.order_service.event
 spring.kafka.consumer.properties.spring.json.value.default.type=vn.com.iuh.fit.order_service.event.ValidateInventoryEvent
-
-# Producer Configuration
 spring.kafka.producer.acks=all
 spring.kafka.producer.retries=5
 spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.properties.spring.json.trusted.packages=vn.com.iuh.fit.order_service.event
-
-# Topics Configuration
-cart.checkout.topic=checkout-events
 
 # ===============================
 # MySQL Database Configuration
