--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -42,7 +42,7 @@ logging.level.org.springframework.security=DEBUG
 logging.level.com.musicstore=INFO
 
 # Elasticsearch
-spring.elasticsearch.uris=http://localhost:9200
+spring.elasticsearch.uris=http://elasticsearch:9200
 spring.elasticsearch.username=elastic
 spring.elasticsearch.password=elastic
 
