--- a/payment-service/Dockerfile
+++ b/payment-service/Dockerfile
@@ -1,31 +1,29 @@
 # ========================== STAGE 1: BUILD ==========================
-# Sử dụng Maven để build ứng dụng
 FROM maven:3.9.4-eclipse-temurin-21-alpine AS builder
 WORKDIR /app
 
-# Copy pom.xml để cache dependencies
-COPY pom.xml . 
+# Copy pom.xml để cache dependencies trước
+COPY pom.xml ./
 RUN mvn dependency:go-offline -B
 
-# Copy source code vào container
+# Copy toàn bộ mã nguồn để build
 COPY src ./src
 
-# Build JAR, bỏ qua test
+# Build project, bỏ qua test để nhanh hơn
 RUN mvn clean package -DskipTests
 
 # ========================== STAGE 2: RUNTIME ==========================
-# Sử dụng JRE để chạy ứng dụng, giảm kích thước image
 FROM eclipse-temurin:21-alpine
 WORKDIR /app
 
-# Copy file JAR đã build từ builder stage
-COPY --from=builder /app/target/Payment-Service-0.0.1-SNAPSHOT.jar Payment-Service.jar
+# Copy file JAR từ builder stage
+COPY --from=builder /app/target/payment-service-0.0.1-SNAPSHOT.jar payment-service.jar
 
-# Thiết lập biến môi trường để tối ưu hiệu suất Java
+# Thiết lập JAVA_OPTS (tối ưu hiệu suất khi chạy container)
 ENV JAVA_OPTS="-XX:+UseG1GC -XX:+ExitOnOutOfMemoryError"
 
-# Expose cổng 8087 cho Payment Service
+# Mở cổng 8087 đúng với cấu hình server.port
 EXPOSE 8087
 
-# Chạy ứng dụng với Java tối ưu
-CMD ["sh", "-c", "java $JAVA_OPTS -jar Payment-Service.jar"]
+# Chạy ứng dụng
+CMD ["sh", "-c", "java $JAVA_OPTS -jar payment-service.jar"]
