--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -5,18 +5,20 @@ spring.application.name=payment-service
 server.port=8087
 
 # ===============================
-# Database Configuration (PostgreSQL)
+# Database Configuration (MySQL)
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/payment_db
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:mysql://localhost:3306/payment_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # ===============================
 # Kafka Configuration
 # ===============================
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.acks=all
 spring.kafka.consumer.group-id=payment-group
 spring.kafka.consumer.auto-offset-reset=earliest
@@ -29,7 +31,7 @@ jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
 # ===============================
 # Eureka Client Configuration
 # ===============================
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
 eureka.instance.hostname=payment-service
 
 # ===============================
