--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -46,3 +46,4 @@ stripe.public-key=pk_test_51NMmPXGFvWB63YkJPgbbUstNVIqgKQJEd7sMw6IiDKuXnuHQLhStK
 paypal.client-id=AfLQ5Cecwg7yqZg8d-lSEagcNOq5EyMl0Gi5RqzrAwcSmwXdKYmvh2ZV0glrpeS1rRKkgFCh_xGjVo4v
 paypal.client-secret=EAyDFklnKIctnyYfVjbfx_YSzQqX1J8frHKm584Z00UnVYiwkeQhaVXvT1Eo3mJs2-0KpK2YAznxRvPS
 paypal.mode=sandbox
+paypal.base-url=https://api-m.sandbox.paypal.com
