--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -43,7 +43,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # ===================== JWT Security Configuration =====================
 jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
-jwt.accessToken.expiration=900000
+jwt.accessToken.expiration=604800000
 jwt.refreshToken.expiration=604800000
 
 
