--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -60,6 +60,10 @@ spring.cloud.gateway.routes[7].id=inventory-service
 spring.cloud.gateway.routes[7].uri=lb://INVENTORY-SERVICE
 spring.cloud.gateway.routes[7].predicates[0]=Path=/api/inventory/**
 
+spring.cloud.gateway.routes[8].id=review-service
+spring.cloud.gateway.routes[8].uri=http://review-service:8090
+spring.cloud.gateway.routes[8].predicates[0]=Path=/api/reviews/**
+
 # Redis Rate Limiting Configuration
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
